# guild_master

./: .gitignore  README.md  pyproject.toml
changelog/: README.md
docs/scratch_pad/: README.md
src/guild_master/: __init__.py  __main__.py  character.py  guild.py
src/guild_master/utils/: basic.py  constants.py
tests/: test_basic.py  test_characters.py  test_guild.py
