[project]
name = "guild-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raza", email = "rali718@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
guild-master = "guild_master.__main__:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
